# obs-command-source

./: CMakeLists.txt  README.md  azure-pipelines.yml  obs-command-source.c  plugin-macros.h.in
.github/containers/fedora-common/: build.sh
.github/containers/fedora-template/: Dockerfile
.github/workflows/: docker-build.yml  main.yml
CI/: build-macos.sh  install-build-obs-macos.sh
ci/: build-macos-integrated.sh  build-macos.sh  ci_includes.generated.cmd  ci_includes.generated.sh  forum-update-info.json  install-build-obs-macos.sh  install-dependencies-macos.sh  package-macos.sh  plugin.spec
ci/linux/: build-ubuntu.sh
ci/macos/: package-macos.sh
ci/windows/: package-windows.cmd  prepare-obs-windows.cmd  prepare-windows.cmd
data/locale/: en-US.ini  ja-JP.ini  pt-BR.ini
doc/: environments.md
installer/: obs-command-source.pkgproj
tools/: request-websocket.py
